# TwinAI

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: ingest.py  main.py  rag.py
backend/docs/: achievements.md  education.md  experience.md  hobbies.md  projects.md  skills.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: About.tsx  ChatWidget.tsx  Contact.tsx  Experience.tsx  Hero.tsx  Navbar.tsx  ParticleNetwork.tsx  Projects.tsx  Skills.tsx  TypeWriter.tsx
